[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/enemy_saucer.png" type="Texture" id=1]
[ext_resource path="res://explosion/Explosion.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemy/EnemyPath.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemy/Enemy.gd" type="Script" id=4]
[ext_resource path="res://bullet/EnemyBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/synthetic_thunder_short.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/enemy_laser.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=5]
radius = 37.0135

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "rotate"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="Enemy" type="Area2D" groups=["enemies"]]
script = ExtResource( 4 )
Bullet = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "rotate"
anims/RESET = SubResource( 6 )
anims/flash = SubResource( 7 )
anims/rotate = SubResource( 8 )

[node name="EnemyPath" parent="." instance=ExtResource( 3 )]

[node name="Explosion" parent="." instance=ExtResource( 2 )]
visible = false

[node name="GunTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
